--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
           </a>
         </div>
         <div class="unit xs-1-4 gutter-1-4">
-          <a href="www.github.com/imane-lazrek" target="_blank">
+          <a href="https://www.github.com/imane-lazrek" target="_blank">
             <i class="icon i-48">
               <img src="images/github.svg" alt="">
             </i>
           </a>
         </div>
         <div class="unit xs-1-4 gutter-1-4">
-          <a href="www.kaggle.com/imanelazrek">
+          <a href="https://www.kaggle.com/imanelazrek">
             <i class="icon i-48">
               <img src="images/kaggle.svg" alt="">
             </i>
           </a>
         </div>
         <div class="unit xs-1-4 gutter-1-4">
-          <a href="www.linkedin.com/in/imane-lazrek">
+          <a href="https://www.linkedin.com/in/imane-lazrek">
             <i class="icon i-48">
               <img src="images/linkedin.svg" alt="">
             </i>
