--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
           </a>
         </div>
         <div class="unit xs-1-4 gutter-1-4">
-          <a href="https://www.kaggle.com/imanelazrek">
+          <a href="https://www.kaggle.com/imanelazrek" target="_blank">
             <i class="icon i-48">
               <img src="images/kaggle.svg" alt="">
             </i>
           </a>
         </div>
         <div class="unit xs-1-4 gutter-1-4">
-          <a href="https://www.linkedin.com/in/imane-lazrek">
+          <a href="https://www.linkedin.com/in/imane-lazrek" target="_blank">
             <i class="icon i-48">
               <img src="images/linkedin.svg" alt="">
             </i>
